--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alura Plus</title>
+
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/logo.png" type="image/png">
 </head>
+
 <body>
     <section class="container principal">
-    <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-    <img src="img/Combo.png" alt="Combo Alura+, mais apredizado em único lugar.">
-</section>
+        <div>
+            <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+            <img src="img/Combo.png" alt="Combo Alura+, mais apredizado em único lugar.">
+            <a class="container__botao" href="https://www.alura.com.br/planos-cursos-online">Assine por 12x de R$ 149,99*</a>
+            <a class="container__botao botao__secudario" href="https://www.alura.com.br/planos-cursos-online">Assinar somente o Alura+</a>
+            <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+        </div>
+    </section>
+
 </body>
+
 </html>
