--- a/index.html
+++ b/index.html
@@ -47,10 +47,48 @@
         <img class="secundario__imagem" src="img/Notebook.png" alt="Notebook com Alura+">
         <div class="container__descricao">
             <h2 class="descricao__titulo">Baixe seus cursos</h2>
-            <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+            <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com
+                você, até mesmo sem internet.</p>
         </div>
     </section>
 
+    <section class="dispositivos">
+        <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
+        <ul class="dispositivos_lista">
+            <li>
+                <img src="img/tv.png" alt="TV">
+                <h3 class="lista__item">TV</h3>
+            </li>
+            <li>
+                <img src="img/computador.png" alt="Computador">
+                <h3 class="lista__item">Computadores</h3>
+            </li>
+            <li>
+                <img src="img/celular.png" alt="Celular e tablet">
+                <h3 class="lista__item">Celulares e tablets</h3>
+            </li>
+        </ul>
+    </section>
+
+    <footer class="rodape">
+        <img src="img/Logo.png" alt="Logo Alura+" class="rodape__imagem">
+        <ul class="rodape__lista">
+            <li><a href="#" class="rodape__item">Idioma</a></li>
+            <li><a href="#" class="rodape__item">Dispositivos compatíveis</a></li>
+            <li><a href="#" class="rodape__item">Contrato de assinatura</a></li>
+            <li><a href="#" class="rodape__item">Politica de privacidade</a></li>
+            <li><a href="#" class="rodape__item">Proteção de dados no Brasil</a></li>
+            <li><a href="#" class="rodape__item">Anuncios personalizados</a></li>
+            <li><a href="#" class="rodape__item">Ajuda</a></li>
+        </ul>
+        <p class="rodape__texto">® 2023 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de
+            assinatura paga. Conteúdo sujeito a disponibilidade.
+        </p>
+        <p class="rodape__texto">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O
+            serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São
+            Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33
+        </p>
+    </footer>
 </body>
 
 </html>
